Added 'partner' data validation
