# internal/components/advertisements/controllers/AdvertisersController.go
@@ -3,19 +3,21 @@ package controllers
 import (
 	"github.com/a1ta1r/Credit-Portfolio/internal/codes"
 	"github.com/a1ta1r/Credit-Portfolio/internal/components/advertisements/entities"
+	"github.com/a1ta1r/Credit-Portfolio/internal/components/advertisements/errors"
 	"github.com/a1ta1r/Credit-Portfolio/internal/components/advertisements/storages"
 	"github.com/a1ta1r/Credit-Portfolio/internal/components/roles"
+	"github.com/a1ta1r/Credit-Portfolio/internal/specification/requests"
 	_ "github.com/a1ta1r/Credit-Portfolio/internal/specification/responses"
 	"github.com/gin-gonic/gin"
-	"github.com/gin-gonic/gin/binding"
+	"gopkg.in/go-playground/validator.v8"
 	"net/http"
 	"strconv"
 )
 
 type AdvertiserController struct {
-	advertiserStorage    storages.AdvertiserStorage
-	bannerStorage        storages.BannerStorage
-	bannerPlaceStorage   storages.BannerPlaceStorage
+	advertiserStorage  storages.AdvertiserStorage
+	bannerStorage      storages.BannerStorage
+	bannerPlaceStorage storages.BannerPlaceStorage
 }
 
 func NewAdvertiserController(
@@ -24,9 +26,9 @@ func NewAdvertiserController(
 	bannerPlaceStorage storages.BannerPlaceStorage,
 ) AdvertiserController {
 	return AdvertiserController{
-		advertiserStorage:    advertiserStorage,
-		bannerStorage:        bannerStorage,
-		bannerPlaceStorage:   bannerPlaceStorage,
+		advertiserStorage:  advertiserStorage,
+		bannerStorage:      bannerStorage,
+		bannerPlaceStorage: bannerPlaceStorage,
 	}
 }
 
@@ -78,18 +80,29 @@ func (ac AdvertiserController) GetAdvertiser(c *gin.Context) {
 // @Description Метод добавляет в систему нового рекламодателя с заданными параметрами
 // @Accept json
 // @Produce  json
-// @Param advertiser body entities.Advertiser true "Данные о рекламодателе"
+// @Param advertiser body requests.NewAdvertiser true "Данные о рекламодателе"
 // @Success 201 {object} responses.OneAdvertiser
 // @Failure 422
 // @Router /partners [post]
 func (ac AdvertiserController) AddAdvertiser(c *gin.Context) {
+	var request requests.NewAdvertiser
 	var advertiser entities.Advertiser
-	c.BindJSON(&advertiser)
+	if err := c.ShouldBindJSON(&request); err != nil {
+		validationErrors, ok := err.(validator.ValidationErrors)
+		if !ok {
+			c.JSON(http.StatusUnprocessableEntity, gin.H{"error": codes.InvalidJSON})
+			return
+		}
+		errorMsg := errors.GetErrorMessages(validationErrors)
+		c.JSON(http.StatusUnprocessableEntity, gin.H{"errors": errorMsg})
+		return
+	}
+	advertiser = request.ToAdvertiser()
 	advertiser.Role = roles.Ads
 	advertiser.Password = advertiser.GetHashedPassword()
 	err := ac.advertiserStorage.CreateAdvertiser(&advertiser)
 	if err != nil {
-		c.JSON(http.StatusUnprocessableEntity, gin.H{"message": codes.ResourceExists})
+		c.JSON(http.StatusUnprocessableEntity, gin.H{"error": codes.Unhealthy})
 		return
 	}
 	advertiser.Password = ""
@@ -107,7 +120,7 @@ func (ac AdvertiserController) AddAdvertiser(c *gin.Context) {
 func (ac AdvertiserController) DeleteAdvertiser(c *gin.Context) {
 	id, err := strconv.ParseUint(c.Param("id"), 10, 32)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusUnprocessableEntity, gin.H{"message": codes.BadID})
+		c.AbortWithStatusJSON(http.StatusUnprocessableEntity, gin.H{"error": codes.BadID})
 		return
 	}
 	advertiser := entities.Advertiser{ID: uint(id)}
@@ -121,25 +134,35 @@ func (ac AdvertiserController) DeleteAdvertiser(c *gin.Context) {
 // @Accept json
 // @Produce  json
 // @Param id path int true "ID рекламодателя"
-// @Param advertiser body entities.Advertiser true "Новые данные о рекламодателе"
+// @Param advertiser body requests.UpdateAdvertiser true "Новые данные о рекламодателе"
 // @Success 200 {object} responses.OneAdvertiser
 // @Failure 404
 // @Failure 422
 // @Router /partners/{id} [put]
 func (ac AdvertiserController) UpdateAdvertiser(c *gin.Context) {
+	var request requests.UpdateAdvertiser
 	var advertiser entities.Advertiser
 	id, err := strconv.ParseUint(c.Param("id"), 10, 32)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusUnprocessableEntity, gin.H{"message": codes.BadID})
+		c.AbortWithStatusJSON(http.StatusUnprocessableEntity, gin.H{"error": codes.BadID})
 		return
 	}
 	advertiser, _ = ac.advertiserStorage.GetAdvertiser(uint(id))
 	if advertiser.ID == 0 {
-		c.JSON(http.StatusNotFound, gin.H{"message": codes.ResNotFound})
+		c.JSON(http.StatusNotFound, gin.H{"error": codes.ResNotFound})
 		return
 	}
-
-	c.ShouldBindWith(&advertiser, binding.JSON)
+	if err := c.ShouldBindJSON(&request); err != nil {
+		validationErrors, ok := err.(validator.ValidationErrors)
+		if !ok {
+			c.JSON(http.StatusUnprocessableEntity, gin.H{"error": codes.InvalidJSON})
+			return
+		}
+		errorMsg := errors.GetErrorMessages(validationErrors)
+		c.JSON(http.StatusUnprocessableEntity, gin.H{"errors": errorMsg})
+		return
+	}
+	advertiser = request.ToAdvertiser(advertiser)
 	_ = ac.advertiserStorage.UpdateAdvertiser(&advertiser)
 	advertiser.Password = ""
 	c.JSON(http.StatusOK, gin.H{
@@ -148,13 +171,11 @@ func (ac AdvertiserController) UpdateAdvertiser(c *gin.Context) {
 	})
 }
 
-
-
 func (ac AdvertiserController) GetBannersByAdvertisement(c *gin.Context) {
 	var banners []entities.Banner
 	id, err := strconv.ParseUint(c.Param("adsid"), 10, 32)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusUnprocessableEntity, gin.H{"message": codes.BadID})
+		c.AbortWithStatusJSON(http.StatusUnprocessableEntity, gin.H{"error": codes.BadID})
 		return
 	}
 	banners, _ = ac.bannerStorage.GetBannersByAdvertisement(uint(id))
